Cria seção de cursos em destaque na página homeAuth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "reactstrap": [
+        "./node_modules/reactstrap/types"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
